[tool.poetry]
name = "pullapprove"
version = "3.21.0"
description = "PullApprove is a framework for code review assignment, processes, and policies that integrates natively with your git host."
authors = ["Dropseed <python@dropseed.dev>"]
license = "Business Source License"
readme = "README.md"
homepage = "https://www.pullapprove.com/"
documentation = "https://docs.pullapprove.com/"
repository = "https://github.com/dropseed/pullapprove"
keywords = ["pull request", "code review", "reviewer"]

[tool.poetry.scripts]
pullapprove = "pullapprove.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
cached-property = "^1.5.2"
requests = "^2.25.1"
dateparser = "^1.0.0"
PyJWT = "^2.1.0"
cryptography = "^41.0.1"
PyYAML = "^6.0"
click = "^8.0.1"
urllib3 = "^1.26.0"  # allowed_methods introduced

# For vendored cachecontrol
lockfile = ">=0.9"
redis = ">=2.10.5"
msgpack = ">=0.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "<1.0.0"
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
ipython = "^8.1.0"
ipdb = "^0.13.9"
black = "^23.3.0"
lxml = "^4.6.3"
isort = "^5.9.3"
types-PyYAML = "*"
types-requests = "*"
types-dateparser = "*"
types-setuptools = "*"
types-redis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ideally this would be directly in the test command (in my opinion...)
# but can't find any way to set it via env variables or flags
[tool.coverage.run]
omit = [
    "pullapprove/_vendor/*",
]
